# MoneyTracker

./: .clang-format  .clang-tidy  .gitignore  BUILD_COMPLETE.txt  BUILD_REPORT.txt  BUILD_STATUS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  GETTING_STARTED.md  GUI_USER_GUIDE.md  IMPROVEMENTS.md  LICENSE  PRODUCTION_READY.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
data/: categories.json  sample_bank.csv  sample_savings.csv
include/: AlertSystem.h  BudgetAnalyzer.h  CSVParser.h  ConfigManager.h  DateParser.h  ErrorHandling.h  Logger.h  MoneyTrackerGUI.h  Security.h  SpreadsheetGenerator.h  TransactionData.h
scripts/: release.sh
src/: AlertSystem.cpp  BudgetAnalyzer.cpp  CSVParser.cpp  ConfigManager.cpp  DateParser.cpp  Logger.cpp  MoneyTrackerGUI.cpp  Security.cpp  SpreadsheetGenerator.cpp  TransactionData.cpp  main.cpp  main_gui.cpp
tests/: test_configmanager.cpp  test_csvparser.cpp  test_dateparser.cpp
